{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 22,
  "lineage": "80d6882b-95f1-b0ad-098c-e47cb31f7a28",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01131bbbec453aea2",
            "domain": "vpc",
            "id": "eipalloc-01131bbbec453aea2",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-159-222.compute-1.amazonaws.com",
            "public_ip": "3.222.159.222",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "homelab-nat-elastic-ip"
            },
            "tags_all": {
              "Name": "homelab-nat-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:internet-gateway/igw-0b6812805ebdaa081",
            "id": "igw-0b6812805ebdaa081",
            "owner_id": "060419353168",
            "tags": {
              "Name": "homelab-internet-gateway"
            },
            "tags_all": {
              "Name": "homelab-internet-gateway"
            },
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060419353168:loadbalancer/app/homelab-external-alb/2f405ef9cdc7aecf",
            "arn_suffix": "app/homelab-external-alb/2f405ef9cdc7aecf",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "homelab-external-alb-1364282001.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:060419353168:loadbalancer/app/homelab-external-alb/2f405ef9cdc7aecf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "homelab-external-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01714646419200bf4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04189f249190929b4"
              },
              {
                "subnet_id": "subnet-0a3dba81fca8e0458"
              }
            ],
            "subnets": [
              "subnet-04189f249190929b4",
              "subnet-0a3dba81fca8e0458"
            ],
            "vpc_id": "vpc-0e38c86f08ace98df",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060419353168:listener/app/homelab-external-alb/2f405ef9cdc7aecf/74648a280eb02c5e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:060419353168:targetgroup/homelab-alb-target-group/57d09cd6b12d3939",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:060419353168:listener/app/homelab-external-alb/2f405ef9cdc7aecf/74648a280eb02c5e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:060419353168:loadbalancer/app/homelab-external-alb/2f405ef9cdc7aecf",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:060419353168:targetgroup/homelab-alb-target-group/57d09cd6b12d3939",
            "arn_suffix": "targetgroup/homelab-alb-target-group/57d09cd6b12d3939",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:060419353168:targetgroup/homelab-alb-target-group/57d09cd6b12d3939",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "homelab-alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01131bbbec453aea2",
            "association_id": "eipassoc-03da86324d2808a80",
            "connectivity_type": "public",
            "id": "nat-0b6db4517dd1f04ad",
            "network_interface_id": "eni-024137f3eef8c350e",
            "private_ip": "172.16.0.146",
            "public_ip": "3.222.159.222",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a3dba81fca8e0458",
            "tags": {
              "Name": "homelab-nat-gateway"
            },
            "tags_all": {
              "Name": "homelab-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:route-table/rtb-0827faeca07fe77be",
            "id": "rtb-0827faeca07fe77be",
            "owner_id": "060419353168",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6db4517dd1f04ad",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homelab-private-route-table"
            },
            "tags_all": {
              "Name": "homelab-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:route-table/rtb-08191583620a18437",
            "id": "rtb-08191583620a18437",
            "owner_id": "060419353168",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6812805ebdaa081",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homelab-public-route-table"
            },
            "tags_all": {
              "Name": "homelab-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02743753e87329fd3",
            "route_table_id": "rtb-0827faeca07fe77be",
            "subnet_id": "subnet-0c257d9c19333c206"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e124bd8e2d93967d",
            "route_table_id": "rtb-0827faeca07fe77be",
            "subnet_id": "subnet-0567711e2dff7a490"
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8186225a901508b",
            "route_table_id": "rtb-08191583620a18437",
            "subnet_id": "subnet-0a3dba81fca8e0458"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ea0992fd3a4e9a1",
            "route_table_id": "rtb-08191583620a18437",
            "subnet_id": "subnet-04189f249190929b4"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:security-group/sg-01714646419200bf4",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01714646419200bf4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "homelab-alb-security-group",
            "name_prefix": "",
            "owner_id": "060419353168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homelab-alb-security-group"
            },
            "tags_all": {
              "Name": "homelab-alb-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:security-group/sg-05b10cee5b5945e60",
            "description": "ASG Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b10cee5b5945e60",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01714646419200bf4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "homelab-asg-security-group",
            "name_prefix": "",
            "owner_id": "060419353168",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homelab-asg-security-group"
            },
            "tags_all": {
              "Name": "homelab-asg-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:subnet/subnet-0c257d9c19333c206",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c257d9c19333c206",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060419353168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homelab-private-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "homelab-private-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:subnet/subnet-0567711e2dff7a490",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0567711e2dff7a490",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "060419353168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homelab-private-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "homelab-private-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:subnet/subnet-0a3dba81fca8e0458",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3dba81fca8e0458",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060419353168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homelab-public-subnet-us-east-1a"
            },
            "tags_all": {
              "Name": "homelab-public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:subnet/subnet-04189f249190929b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04189f249190929b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060419353168",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "homelab-public-subnet-us-east-1b"
            },
            "tags_all": {
              "Name": "homelab-public-subnet-us-east-1b"
            },
            "vpc_id": "vpc-0e38c86f08ace98df"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060419353168:vpc/vpc-0e38c86f08ace98df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d6aa0218423d9709",
            "default_route_table_id": "rtb-058fab03c61dc4348",
            "default_security_group_id": "sg-0b0a80548eb1e66ae",
            "dhcp_options_id": "dopt-a7ab98dd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e38c86f08ace98df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-058fab03c61dc4348",
            "owner_id": "060419353168",
            "tags": {
              "Name": "homelab-vpc"
            },
            "tags_all": {
              "Name": "homelab-vpc"
            }
          }
        }
      ]
    }
  ]
}